segundo dia de estudos js

--- a/aula2/index.html
+++ b/aula2/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aula js</title>
+    <title>Dom</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Aula JS</h1>
+    <h1>DOM</h1>
+    <p>Document Object Model</p>
+    <p>aprenda a usar o <strong>DOM</strong> em JavaScript</p>
+    <div class="botao activate" onmouseenter="entrar()">clique em mim</div>
 </body>
-<script src="index.js"></script>
+<script src="dom.js"></script>
 </html>
